icone studenti/prof

--- a/pages/login.html
+++ b/pages/login.html
@@ -4,7 +4,7 @@
     <div onmouseover="ChangeBackgroundColor(this)" onmouseout="RestoreBackgroundColor(this)" style="cursor: pointer;"  onclick="onclickProf()">
         <table>
             <tr>
-                <td rowspan="2" class="commandLinkTD"><img src="images/prof.png" alt="" style="max-width: 32px; max-height: 32px;"></td>
+                <td rowspan="2" class="commandLinkTD"><i class="fas fa-chalkboard-teacher accessoIcona"></i></td>
                 <td class="commandLinkTD"><p class="commandLinkTitle">Professore</p></td>
             </tr>
             <tr>
@@ -15,7 +15,7 @@
     <div onmouseover="ChangeBackgroundColor(this)" onmouseout="RestoreBackgroundColor(this)" style="cursor: pointer;" onclick="onclickStudente()">
         <table>
             <tr>
-                <td rowspan="2" class="commandLinkTD"><img src="images/studenti.png" alt="" style="max-width: 32px; max-height: 32px;"></td>
+                <td rowspan="2" class="commandLinkTD"><i class="fas fa-user-graduate accessoIcona"></i></td>
                 <td class="commandLinkTD"><p class="commandLinkTitle">Studente</p></td>
             </tr>
             <tr>
@@ -27,7 +27,7 @@
 <div id="logProf" class="bg">                                                                                                           <!--Modificato in data 22/03/2019     Fani (da qui)-->
     <table>
         <tr>
-            <td rowspan="2" class="commandLinkTD"><img src="images/prof.png" alt="" style="max-width: 32px; max-height: 32px;"></td>
+            <td rowspan="2" class="commandLinkTD"><i class="fas fa-chalkboard-teacher accessoIcona"></i></td>
             <td class="commandLinkTD"><p class="commandLinkTitle">Professore</p></td>
         </tr>
         <tr>
@@ -46,7 +46,7 @@
 <div id="logStudente" class="bg" style='display:"none";'>
     <table>
         <tr>
-            <td rowspan="2" class="commandLinkTD"><img src="images/studenti.png" alt="" style="max-width: 32px; max-height: 32px;"></td>
+            <td rowspan="2" class="commandLinkTD"><i class="fas fa-user-graduate accessoIcona"></i></td>
             <td class="commandLinkTD"><p class="commandLinkTitle">Studente</p></td>
         </tr>
         <tr>
@@ -61,4 +61,4 @@
         <input type="button" value="Indietro" onclick="onloadAccedi()">
         <input type="submit" name="submitStudente" value="LogIn">
     </form>
-</div>  
+</div>
