--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <html>
     <head>
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
         <link rel="stylesheet" href="styles/stile.css">
         <script src="js/jquery-3.3.1.min.js"></script>
         <script src="js/index.js"></script>
         <title>Pagina iniziale</title>
     </head>
-    <body> 
+    <body>
         <div id="mySidenav" class="sidenav">
         </div>
-        <div>               
+        <div>
             <ul class="NavUl">
             	<div class="container" onclick="myFunction(this)">
                 	<div class="bar1"></div>
@@ -17,7 +18,7 @@
                 </div>
             </ul>
         </div>
-        <div id="main">                
+        <div id="main">
         </div>
     </body>
 </html>
