--- a/pages/login.html
+++ b/pages/login.html
@@ -24,10 +24,7 @@
     <table>
         <tr>
             <td rowspan="2" class="commandLinkTD"><i class="fas fa-chalkboard-teacher accessoIcona"></i></td>
-            <td class="commandLinkTD"><p class="commandLinkTitle">Professore</p></td>
-        </tr>
-        <tr>
-            <td class="commandLinkTD">Accedi come un professore oppure un amministratore</td>
+            <td class="commandLinkTD"><p class="commandLinkTitle">Professore</p> Accedi come un professore oppure un amministratore </td>
         </tr>
     </table>
     <form>
@@ -43,10 +40,7 @@
     <table>
         <tr>
             <td rowspan="2" class="commandLinkTD"><i class="fas fa-user-graduate accessoIcona"></i></td>
-            <td class="commandLinkTD"><p class="commandLinkTitle">Studente</p></td>
-        </tr>
-        <tr>
-            <td class="commandLinkTD">Accedi come uno studente</td>
+            <td class="commandLinkTD"><p class="commandLinkTitle">Studente</p> Accedi come uno studente</td>
         </tr>
     </table>
     <form>
