aggiustamenti vari e inizio login

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
         <link rel="stylesheet" href="styles/stile.css">
         <script src="js/jquery-3.3.1.min.js"></script>
         <script src="js/index.js"></script>
