--- a/pages/login.html
+++ b/pages/login.html
@@ -4,42 +4,33 @@
     <div onmouseover="ChangeBackgroundColor(this)" onmouseout="RestoreBackgroundColor(this)" style="cursor: pointer;"  onclick="onclickProf()">
         <table>
             <tr>
-                <td rowspan="2" class="commandLinkTD"><img src="images/prof.png" alt="" style="max-width: 32px; max-height: 32px;"></td>
-                <td class="commandLinkTD"><p class="commandLinkTitle">Professore</p></td>
-            </tr>
-            <tr>
-                <td class="commandLinkTD">Accedi come un professore oppure un amministratore</td>
+                <td rowspan="2" class="commandLinkTD"><i class="fas fa-chalkboard-teacher accessoIcona"></i></td>
+                <td class="commandLinkTD"><p class="commandLinkTitle">Professore</p> Accedi come un professore oppure un amministratore</td>
             </tr>
         </table>
     </div>
     <div onmouseover="ChangeBackgroundColor(this)" onmouseout="RestoreBackgroundColor(this)" style="cursor: pointer;" onclick="onclickStudente()">
         <table>
             <tr>
-                <td rowspan="2" class="commandLinkTD"><img src="images/studenti.png" alt="" style="max-width: 32px; max-height: 32px;"></td>
-                <td class="commandLinkTD"><p class="commandLinkTitle">Studente</p></td>
-            </tr>
-            <tr>
-                <td class="commandLinkTD">Accedi come uno studente</td>
+                <td rowspan="2" class="commandLinkTD"><i class="fas fa-user-graduate accessoIcona"></i></td>
+                <td class="commandLinkTD"><p class="commandLinkTitle">Studente</p> Accedi come uno studente</td>
             </tr>
         </table>
     </div>
 </div>
-<div id="logProf" class="bg">                                                                                                           <!--Modificato in data 22/03/2019     Fani (da qui)-->
+<div id="logProf" class="bg">                                                                                                          
     <table>
         <tr>
-            <td rowspan="2" class="commandLinkTD"><img src="images/prof.png" alt="" style="max-width: 32px; max-height: 32px;"></td>
-            <td class="commandLinkTD"><p class="commandLinkTitle">Professore</p></td>
-        </tr>
-        <tr>
-            <td class="commandLinkTD">Accedi come un professore oppure un amministratore</td>
+            <td rowspan="2" class="commandLinkTD"><i class="fas fa-chalkboard-teacher accessoIcona"></i></td>
+            <td class="commandLinkTD"><p class="commandLinkTitle">Professore</p> Accedi come un professore oppure un amministratore </td>
         </tr>
     </table>
-    <form>
+    <form onsubmit="loginSubmit(this)" name="loginProf">
         <label for="uname"><b>Username</b></label>
         <input type="text" placeholder="Inserire Username" name="uname" required>
         <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw" required>
-        <input type="button" value="Indietro" onclick="onloadAccedi()">
+        <input type="password" placeholder="Inserire Password" name="psw" required>
+        <input type="button" value="Indietro" onclick="onloadAccedi()" class="button">
         <input type="submit" name="submitProf" value="LogIn">
     </form>
 </div>
@@ -53,12 +44,12 @@
             <td class="commandLinkTD">Accedi come uno studente</td>
         </tr>
     </table>
-    <form>
+    <form onsubmit="loginSubmit(this)" name="loginStud">
         <label for="uname"><b>Username</b></label>
         <input type="text" placeholder="Inserire Username" name="uname" required>
         <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw" required>
-        <input type="button" value="Indietro" onclick="onloadAccedi()">
+        <input type="password" placeholder="Inserire Password" name="psw" required>
+        <input type="button" value="Indietro" onclick="onloadAccedi()" class="button">
         <input type="submit" name="submitStudente" value="LogIn">
     </form>
 </div>  
