--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </div>
         <div>
             <ul class="NavUl">
-            	 <div class="container" onclick="myFunction(this)">
+            	 <div class="container" onclick="showHideNav(this)">
                 	<div class="bar1"></div>
                   <div class="bar2"></div>
                   <div class="bar3"></div>
