--- a/pages/login.html
+++ b/pages/login.html
@@ -1,6 +1,6 @@
 <div id="chiSei" class="bg">
     <div class="infoBoxLogin">
-      <h4> <i class="fas fa-exclamation-triangle"></i> Selezionare l'opzione di accesso per continuare <i class="fas fa-exclamation-triangle"></i></h4>
+      <h4>  Selezionare l'opzione di accesso per continuare </h4>
       <p class="infoLogin">Per effettuare l'accesso &egrave; necessario specificare chi sta utlizzando il dispositivo</p>
     </div>
     <div class="selectLogin" onclick="onclickProf()">
@@ -54,7 +54,7 @@
           <b>Password</b><br>
           <input type="password" placeholder="Inserire Password" name="psw" required><br>
           <input type="button" value="Indietro" onclick="onloadAccedi()" class="button">
-          <input type="submit" name="submitStudente" value="LogIn">
+          <input type="submit" name="submitStudente" value="Log In">
       </form>
     </td>
     <td class="divider"></td>
